Explicitly set width 100% and height 100% on the video element of the video trail. This ensures the player always stretches to fill .video-trail__asset (which itself is 100% of .video-trail__item, i.e. 400px).
Without this, its possible the video can fall back the default stylesheet (300px.)

--- a/public/video-ui/styles/components/_video-trail.scss
+++ b/public/video-ui/styles/components/_video-trail.scss
@@ -10,7 +10,14 @@
 .video-trail__asset{
   display: flex;
   height: 250px;
+  width: 100%;
 }
+
+.video-trail__asset .video-player {
+  width: 100%;
+  height: 100%;
+}
+
 
 .video-trail__upload{
   display: flex;
